fix the wrap around issue for composite horizontal bar charts
Former-commit-id: 2e758573cc543e8849fbbcf75cb19240579648c0

--- a/style/Whole.css
+++ b/style/Whole.css
@@ -170,7 +170,7 @@ body .dc-chart g.row text {
 
 .inner_container {
   display: inline-block;
-  width: 1360px;
+  width: 1380px;
   padding-top: 60px; }
   .inner_container .instructions {
     color: #888888; }
