--- a/style/dc.scss
+++ b/style/dc.scss
@@ -248,7 +248,7 @@ body .dc-chart g.row text {
 
 .inner_container {
     display: inline-block;
-    width: 1360px;
+    width: 1380px;
     padding-top: 60px;
 
     .instructions {
